--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,43 @@
-plugins {
-    id 'java'
+// groovy 언어를 사용한 빌드 툴. 빌드, 테스트, 배포 자동화
+//  JVM 기반 프로젝트에 대한 종속성 선언
+buildscript {
+    // ext : 전역 변수
+    // def : 로컬 변수
+    // build.gradle에서 전역변수를 설정한다는 의미
+    ext {
+        /*
+        springboot버전을 2.6.1로 설정 - spring-boot-gradle-plugin라는 스프링 부트
+        그레이들 플러그인의 2.6.1을 의존성으로 받는다는 의미
+        */
+        springBootversion = '2.6.1'
+    }
+    // springbootversion으로 버전을 따라가기때문에 유지보수나 충동문제등이 없다.
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootversion}")
+    }
+    // 중앙 저장소
+    repositories {
+        mavenCentral()
+    }
 }
 
+plugins {
+    id 'java'
+    id 'eclipse'
+    id 'org.springframework.boot' version '2.6.1'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+}
 group 'site.winesee.project'
 version '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
+
 
 repositories {
     mavenCentral()
 }
 
+// 프로젝트 개발에 필요한 의존성들을 선언하는 부분
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
-}
-
-test {
-    useJUnitPlatform()
+    implementation('org.springframework.boot:spring-boot-starter-web')
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
