--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,17 @@ dependencies {
     testImplementation('org.projectlombok:lombok')
     testAnnotationProcessor('org.projectlombok:lombok')
 
+    // DB
+    /*
+    h2 인메모리 관계형 데이터베이스.
+    별도의 설치가 필요 없이 프로젝트 의존성만으로 관리할 수 있습니다.
+    메모리에서 실행되기 때문에 에플리케이션을 재시작할 때마다 초기화된다는 점을 이용하여 테스트 용도로 많이 사용됨.
+    jpa 스프링 부트용 Spring Data Jpa 추상화 라이브러리
+    스프링 부트 버전에 맞춰 자동으로 jpa관련 라이브러리들의 버전을 관리해 줍니다.
+     */
+    implementation('com.h2database:h2')
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+
     // testcompile
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
