--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,70 @@
+// groovy 언어를 사용한 빌드 툴. 빌드, 테스트, 배포 자동화
+//  JVM 기반 프로젝트에 대한 종속성 선언
+//buildscript {
+//    // ext : 전역 변수
+//    // def : 로컬 변수
+//    // build.gradle에서 전역변수를 설정한다는 의미
+//    ext {
+//        /*
+//        springboot버전을 2.6.1로 설정 - spring-boot-gradle-plugin라는 스프링 부트
+//        그레이들 플러그인의 2.6.1을 의존성으로 받는다는 의미
+//        */
+//        springBootversion = '2.6.1'
+//    }
+//    // springbootversion으로 버전을 따라가기때문에 유지보수나 충동문제등이 없다.
+//    dependencies {
+//        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootversion}")
+//    }
+//    // 중앙 저장소
+//    repositories {
+//        mavenCentral()
+//    }
+//}
+
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '2.6.1'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
 
 group 'site.winesee.project'
 version '0.0.1-SNAPSHOT'
+version '0.0.1-SNAPSHOT-'+new Date().format("yyyyMMddHHmmss")
 sourceCompatibility = 1.8
+
 
 repositories {
     mavenCentral()
 }
 
+// 프로젝트 개발에 필요한 의존성들을 선언하는 부분
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    // Spring Boot
+    implementation('org.springframework.boot:spring-boot-starter-web')
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
+
+    // lombok
+    implementation('org.projectlombok:lombok')
+    annotationProcessor('org.projectlombok:lombok')
+    testImplementation('org.projectlombok:lombok')
+    testAnnotationProcessor('org.projectlombok:lombok')
+
+    // DB
+    /*
+    h2 인메모리 관계형 데이터베이스.
+    별도의 설치가 필요 없이 프로젝트 의존성만으로 관리할 수 있습니다.
+    메모리에서 실행되기 때문에 에플리케이션을 재시작할 때마다 초기화된다는 점을 이용하여 테스트 용도로 많이 사용됨.
+    jpa 스프링 부트용 Spring Data Jpa 추상화 라이브러리
+    스프링 부트 버전에 맞춰 자동으로 jpa관련 라이브러리들의 버전을 관리해 줍니다.
+     */
+    implementation('com.h2database:h2')
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+
+    // testcompile
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
 test {
