--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.jpa.show_sql=true
+spring.h2.console.enabled=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
-spring.di8=[;kj-,ik0-==]kloatasource.hikari.username=sa
-?P:
 
-[p]'
+#spring.di8=[;kj-,ik0-==]kloatasource.hikari.username=sa
