--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ plugins {
     id 'org.springframework.boot' version '2.6.1'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
+
 group 'site.winesee.project'
 version '0.0.1-SNAPSHOT-'+new Date().format("yyyyMMddHHmmss")
 sourceCompatibility = 1.8
@@ -37,6 +38,9 @@ repositories {
 
 // 프로젝트 개발에 필요한 의존성들을 선언하는 부분
 dependencies {
+    // 머스테치 템플릿 의존성 추가
+    implementation('org.springframework.boot:spring-boot-starter-mustache')
+
     // Spring Boot
     implementation('org.springframework.boot:spring-boot-starter-web')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
@@ -46,6 +50,7 @@ dependencies {
     annotationProcessor('org.projectlombok:lombok')
     testImplementation('org.projectlombok:lombok')
     testAnnotationProcessor('org.projectlombok:lombok')
+
 
     // DB
     /*
@@ -59,12 +64,13 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 
     // testcompile
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-
-    testImplementation 'org.hamcrest:hamcrest:2.2'
+    testImplementation(platform('org.junit:junit-bom:5.8.2'))
+    testImplementation('org.junit.jupiter:junit-jupiter')
 }
 
 test {
     useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
