--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
 
 #spring.di8=[;kj-,ik0-==]kloatasource.hikari.username=sa
+
+
+# ?? ??? ??? properties ??
+spring.profiles.include=oauth
