--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,14 @@ dependencies {
     // testcompile
     testImplementation(platform('org.junit:junit-bom:5.8.2'))
     testImplementation('org.junit.jupiter:junit-jupiter')
+
+    // Spring Security
+    /*
+    소셜 로그인 등 클라이언트 입장에서 소셜 기능 구현 시 필요한 의존성.
+    spring-boot-starter-oauth2-client와
+    spring-boot-starter-oauth2-jose를 기본으로 관리해줍니다.
+     */
+    implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
 }
 
 test {
