--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
 
-#spring.di8=[;kj-,ik0-==]kloatasource.hikari.username=sa
-
-
-# ?? ??? ??? properties ??
+# application-xxx.properties? ??? xxx?? profile? ???? ???? ??? ? ??.
+# profile=xxx?? ???? ???? ????? ??? ? ??.
 spring.profiles.include=oauth
